--- a/storefront/templates/storefront/base.html
+++ b/storefront/templates/storefront/base.html
@@ -42,6 +42,7 @@
 
     <!-- Mobile App Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="{{ business.business_name|default:'Nexus' }}" />
 
